2009-12-14  Tobias C. Rittweiler  <tcr@freebits.de>

	Take recursiveness of LABELS into account for displaying local
	arglists. I.e. make the following work:

         (labels ((iseven (x)
                    ...)
                  (isodd (y)
                    (if (zerop y)
                       nil
                      (iseven <>))))) ; Point is here
	   ...)

	As we only have information to look backward, we cannot show
	arglist for ISODD within ISEVEN, though.

	* swank-arglists.lisp (extract-local-op-arglists): Handle LABELS
	specially.
	(find-subform-with-arglists): Adapted accordingly. Plus: Small
	refactoring, and fix comparasion of local ops to properly deal
	with arglist dummies.

2009-12-14  Stas Boukarev  <stassats@gmail.com>

	* slime-asdf.el (slime-delete-system-fasls): New command with a
	shortcut `delete-system-fasls'.

	* swank-asdf.lisp (delete-system-fasls): New function.
	(asdf-module-output-files): New function for finding fasls.

2009-12-12  Matthias Koeppe  <mkoeppe@math.ucdavis.edu>

	* slime-presentations.el (slime-reify-old-output): Revert change
	of 2009-12-11, which introduced spurious quotes in non-evaluated
	contexts like here:

	  '(1 2 #<STANDARD-CLASS STANDARD-OBJECT> 3 4)

	Presentations do not change standard quoting rules; users just
	need to remember this.

2009-12-11  Stas Boukarev  <stassats@gmail.com>

	* slime-fuzzy.el (slime-fuzzy-choices-buffer): Don't
	show cursor in *Fuzzy Completions*.
	Patch by Tobias C. Rittweiler.

2009-12-11  Stas Boukarev  <stassats@gmail.com>

	* slime-presentations.el (slime-reify-old-output): Quote
	the CL expession behind presentations, so _(1 2 3)_ (representing a
	presentation) is not tried to be evaluated.
	(slime-copy-presentation-to-repl): Use `looking-back' for looking back.
	Apply De Morgan's law to conditions.
	Patch by Tobias C. Rittweiler.

2009-12-11  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (find-operation): New function for